--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -61,8 +61,8 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: ${{ secrets.AWS_APP_NAME }}
-        environment_name: ${{ secrets.AWS_ENV_NAME }}
+        application_name: Ci-Cd-Kryptering
+        environment_name: Ci-Cd-Kryperting-env
         version_label: "v${{ github.run_number }}"
-        region: ${{ secrets.AWS_REGION }}
+        region: eu-north-1
         deployment_package: deploy.zip
